// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> render list 1`] = `
<Overlay>
  <List__AAList
    gutter="5px"
  >
    <div
      style={
        Object {
          "width": undefined,
        }
      }
    >
      <SubList
        activeSubListId=""
        current="overall"
        items={
          Array [
            Object {
              "id": "overall",
              "title": "Overall",
            },
            Object {
              "id": "games",
              "subList": Array [
                Object {
                  "id": "action",
                  "title": "Action",
                },
                Object {
                  "id": "adventure",
                  "title": "Adventure",
                },
                Object {
                  "id": "arcade",
                  "title": "Arcade",
                },
                Object {
                  "id": "board",
                  "title": "Board",
                },
                Object {
                  "id": "card",
                  "title": "Card",
                },
                Object {
                  "id": "casino",
                  "title": "Casino",
                },
                Object {
                  "id": "dice",
                  "title": "Dice",
                },
                Object {
                  "id": "game_education",
                  "title": "Education",
                },
                Object {
                  "id": "family",
                  "title": "Family",
                },
                Object {
                  "id": "game_kids",
                  "title": "Kids",
                },
                Object {
                  "id": "game_music",
                  "title": "Music",
                },
                Object {
                  "id": "puzzle",
                  "title": "Puzzle",
                },
                Object {
                  "id": "racing",
                  "title": "Racing",
                },
                Object {
                  "id": "role_playing",
                  "title": "Role Playing",
                },
                Object {
                  "id": "simulation",
                  "title": "Simulation",
                },
                Object {
                  "id": "sports",
                  "title": "Sports",
                },
                Object {
                  "id": "strategy",
                  "title": "Strategy",
                },
                Object {
                  "id": "trivia",
                  "title": "Trivia",
                },
                Object {
                  "id": "word",
                  "title": "Word",
                },
              ],
              "title": "Games",
            },
          ]
        }
        onClickSubPanel={[Function]}
        onSelect={[Function]}
      />
    </div>
  </List__AAList>
</Overlay>
`;

exports[`<List> render list with label 1`] = `
<OverlayTrigger
  getOverlay={[Function]}
  trigger="click"
>
  <DropdownButton
    label="Category"
    value=""
  />
</OverlayTrigger>
`;

exports[`<ListItem> render list item 1`] = `
<a
  className="List__ListItem-kf17bn-0 is-active is-locked vJOeA"
/>
`;

exports[`<ListOverlay /> render list with active subList 1`] = `
<Overlay>
  <List__AAList
    gutter="5px"
  >
    <div
      style={
        Object {
          "width": 180,
        }
      }
    >
      <SubList
        activeSubListId=""
        current="action"
        items={
          Array [
            Object {
              "id": "overall",
              "title": "Overall",
            },
            Object {
              "id": "games",
              "subList": Array [
                Object {
                  "id": "action",
                  "title": "Action",
                },
                Object {
                  "id": "adventure",
                  "title": "Adventure",
                },
                Object {
                  "id": "arcade",
                  "title": "Arcade",
                },
                Object {
                  "id": "board",
                  "title": "Board",
                },
                Object {
                  "id": "card",
                  "title": "Card",
                },
                Object {
                  "id": "casino",
                  "title": "Casino",
                },
                Object {
                  "id": "dice",
                  "title": "Dice",
                },
                Object {
                  "id": "game_education",
                  "title": "Education",
                },
                Object {
                  "id": "family",
                  "title": "Family",
                },
                Object {
                  "id": "game_kids",
                  "title": "Kids",
                },
                Object {
                  "id": "game_music",
                  "title": "Music",
                },
                Object {
                  "id": "puzzle",
                  "title": "Puzzle",
                },
                Object {
                  "id": "racing",
                  "title": "Racing",
                },
                Object {
                  "id": "role_playing",
                  "title": "Role Playing",
                },
                Object {
                  "id": "simulation",
                  "title": "Simulation",
                },
                Object {
                  "id": "sports",
                  "title": "Sports",
                },
                Object {
                  "id": "strategy",
                  "title": "Strategy",
                },
                Object {
                  "id": "trivia",
                  "title": "Trivia",
                },
                Object {
                  "id": "word",
                  "title": "Word",
                },
              ],
              "title": "Games",
            },
          ]
        }
        onClickSubPanel={[Function]}
        onSelect={[Function]}
      />
    </div>
  </List__AAList>
</Overlay>
`;

exports[`<SubList> render sublist 1`] = `
<div>
   
  <FlexGrid>
    <FlexGrid.Item
      flex={1}
    >
      <ListItem
        className="AASubList-item"
        isActive={false}
        onClick={[Function]}
      >
        <Text__Text
          ellipsis={true}
        >
          Overall
        </Text__Text>
      </ListItem>
    </FlexGrid.Item>
    <FlexGrid.Item
      flex={0}
    />
  </FlexGrid>
  <FlexGrid>
    <FlexGrid.Item
      flex={1}
    >
      <ListItem
        className="AASubList-item"
        isActive={true}
        onClick={[Function]}
      >
        <Text__Text
          ellipsis={true}
        >
          Games
        </Text__Text>
      </ListItem>
    </FlexGrid.Item>
    <FlexGrid.Item
      flex={0}
    >
      <Button__Blank
        className="AASubList-btn"
        onClick={[Function]}
      >
        <List__Icon
          className="AASubList-icon"
          isCollapsable={false}
        >
          <MdChevronRight
            size={16}
          />
        </List__Icon>
      </Button__Blank>
    </FlexGrid.Item>
  </FlexGrid>
   
</div>
`;

exports[`<SubList> renders collapsable icons 1`] = `
<div
  className="List__Icon-kf17bn-1 dTnsla"
/>
`;

exports[`<SubList> renders collapsable icons 2`] = `
<div
  className="List__Icon-kf17bn-1 lgGwQD"
/>
`;
